--- a/src/components/Podcasts/index.scss
+++ b/src/components/Podcasts/index.scss
@@ -56,7 +56,7 @@
       &-img {
         width: 60px;
         margin-right: 20px;
-        margin-top: 20px;
+        // margin-top: 20px;
         border: 1px solid #e9e6e6;
         padding: 5px;
 
