--- a/src/components/Container/index.scss
+++ b/src/components/Container/index.scss
@@ -9,7 +9,7 @@
   .content {
     position: relative;
     background: #fff;
-    max-width: 800px;
+    // max-width: 800px;
     margin: 0 auto;
     margin-top: -150px;
     padding: 64px;
